--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,58 @@
 
 Final Project/booking bus/DI_FINAL_PROJECT/
+Smart Parking/SQL/parking_slot.sql
+Smart_Parking/.vs/ProjectEvaluation/smart_parking.metadata.v6.1
+Smart_Parking/.vs/ProjectEvaluation/smart_parking.projects.v6.1
+Smart_Parking/.vs/slnx.sqlite
+Smart_Parking/.vs/Smart_Parking/DesignTimeBuild/.dtbcache.v2
+Smart_Parking/.vs/Smart_Parking/FileContentIndex/9177de59-191e-48b5-9982-8fc13de0e98d.vsidx
+Smart_Parking/.vs/Smart_Parking/FileContentIndex/ad983ffd-55d2-4bfc-8499-c35c51b05c61.vsidx
+Smart_Parking/.vs/Smart_Parking/FileContentIndex/b5c3db5a-d662-45ec-ad61-281f19bf9802.vsidx
+Smart_Parking/.vs/Smart_Parking/FileContentIndex/e9993d07-4a00-4113-a87d-548bcf900220.vsidx
+Smart_Parking/.vs/Smart_Parking/FileContentIndex/read.lock
+Smart_Parking/.vs/Smart_Parking/v17/.futdcache.v2
+Smart_Parking/.vs/Smart_Parking/v17/.suo
+Smart_Parking/.vs/Smart_Parking/v17/.wsuo
+Smart_Parking/.vs/VSWorkspaceState.json
+Smart_Parking/Smart_Parking.sln
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/runtimes/unix/lib/netcoreapp2.1/System.Data.SqlClient.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/runtimes/win-arm64/native/sni.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/runtimes/win-x64/native/sni.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/runtimes/win-x86/native/sni.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/runtimes/win/lib/netcoreapp2.1/System.Data.SqlClient.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/Smart_Parking.deps.json
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/Smart_Parking.dll
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/Smart_Parking.exe
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/Smart_Parking.pdb
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/Smart_Parking.runtimeconfig.json
+Smart_Parking/Smart_Parking/bin/Debug/net6.0/System.Data.SqlClient.dll
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/apphost.exe
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/ref/Smart_Parking.dll
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/refint/Smart_Parking.dll
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.AssemblyInfo.cs
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.AssemblyInfoInputs.cache
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.assets.cache
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.csproj.AssemblyReference.cache
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.csproj.BuildWithSkipAnalyzers
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.csproj.CopyComplete
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.csproj.CoreCompileInputs.cache
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.csproj.FileListAbsolute.txt
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.dll
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.GeneratedMSBuildEditorConfig.editorconfig
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.genruntimeconfig.cache
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.GlobalUsings.g.cs
+Smart_Parking/Smart_Parking/obj/Debug/net6.0/Smart_Parking.pdb
+Smart_Parking/Smart_Parking/obj/project.assets.json
+Smart_Parking/Smart_Parking/obj/project.nuget.cache
+Smart_Parking/Smart_Parking/obj/Release/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.AssemblyInfo.cs
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.AssemblyInfoInputs.cache
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.assets.cache
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.csproj.AssemblyReference.cache
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.GeneratedMSBuildEditorConfig.editorconfig
+Smart_Parking/Smart_Parking/obj/Release/net6.0/Smart_Parking.GlobalUsings.g.cs
+Smart_Parking/Smart_Parking/obj/Smart_Parking.csproj.nuget.dgspec.json
+Smart_Parking/Smart_Parking/obj/Smart_Parking.csproj.nuget.g.props
+Smart_Parking/Smart_Parking/obj/Smart_Parking.csproj.nuget.g.targets
+Smart_Parking/Smart_Parking/Smart_Parking.csproj
